<resources>
    <string name="app_name">AndroidTvSample</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="sports">Sports</string>
    <string name="tv">TV</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">"Hello "</string>
</resources>