<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:nextFocusRight="@id/blfNavBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/blfNavBar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.leanback.widget.BrowseFrameLayout
        android:id="@+id/blfNavBar"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:nextFocusLeft="@id/container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/selector_menu"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/search"
                android:textColor="@color/text_selector_white_grey" />

            <TextView
                android:id="@+id/btn_home"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/selector_menu"
                android:drawableStart="@drawable/ic_home"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/home"
                android:textColor="@color/text_selector_white_grey" />

            <TextView
                android:id="@+id/btn_movies"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/selector_menu"
                android:drawableStart="@drawable/ic_movie"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/movie"
                android:textColor="@color/text_selector_white_grey" />

            <TextView
                android:id="@+id/btn_tv"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/selector_menu"
                android:drawableStart="@drawable/ic_tv"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/tv"
                android:textColor="@color/text_selector_white_grey" />

            <TextView
                android:id="@+id/btn_sports"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/selector_menu"
                android:drawableStart="@drawable/ic_sports"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/sports"
                android:textColor="@color/text_selector_white_grey" />

            <TextView
                android:id="@+id/btn_settings"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/selector_menu"
                android:drawableStart="@drawable/ic_settings"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/settings"
                android:textColor="@color/text_selector_white_grey" />

            <TextView
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/selector_menu"
                android:drawableStart="@drawable/ic_language"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/language"
                android:textColor="@color/text_selector_white_grey" />

            <TextView
                android:id="@+id/btn_genre"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/selector_menu"
                android:drawableStart="@drawable/ic_genre"
                android:drawablePadding="16dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/genre"
                android:textColor="@color/text_selector_white_grey" />

        </LinearLayout>


    </androidx.leanback.widget.BrowseFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>